--- a/90.download/이클립스/el_web_neon_work/eclipse/p2/org.eclipse.equinox.p2.engine/profileRegistry/epp.package.jee.profile/.data/.settings/org.eclipse.equinox.p2.artifact.repository.prefs
+++ b/90.download/이클립스/el_web_neon_work/eclipse/p2/org.eclipse.equinox.p2.engine/profileRegistry/epp.package.jee.profile/.data/.settings/org.eclipse.equinox.p2.artifact.repository.prefs
@@ -1,39 +1,40 @@
 eclipse.preferences.version=1
-repositories/file\:_C\:_Users_david_Desktop_90.download_\uC774\uD074\uB9BD\uC2A4_el_web_neon_work_eclipse/description=
-repositories/file\:_C\:_Users_david_Desktop_90.download_\uC774\uD074\uB9BD\uC2A4_el_web_neon_work_eclipse/enabled=true
-repositories/file\:_C\:_Users_david_Desktop_90.download_\uC774\uD074\uB9BD\uC2A4_el_web_neon_work_eclipse/isSystem=true
-repositories/file\:_C\:_Users_david_Desktop_90.download_\uC774\uD074\uB9BD\uC2A4_el_web_neon_work_eclipse/name=Bundle pool
-repositories/file\:_C\:_Users_david_Desktop_90.download_\uC774\uD074\uB9BD\uC2A4_el_web_neon_work_eclipse/provider=
-repositories/file\:_C\:_Users_david_Desktop_90.download_\uC774\uD074\uB9BD\uC2A4_el_web_neon_work_eclipse/suffix=artifacts.xml
-repositories/file\:_C\:_Users_david_Desktop_90.download_\uC774\uD074\uB9BD\uC2A4_el_web_neon_work_eclipse/type=org.eclipse.equinox.p2.artifact.repository.simpleRepository
-repositories/file\:_C\:_Users_david_Desktop_90.download_\uC774\uD074\uB9BD\uC2A4_el_web_neon_work_eclipse/uri=file\:/C\:/Users/david/Desktop/90.download/\uC774\uD074\uB9BD\uC2A4/el_web_neon_work/eclipse/
-repositories/file\:_C\:_Users_david_Desktop_90.download_\uC774\uD074\uB9BD\uC2A4_el_web_neon_work_eclipse/version=1.0.0
-repositories/file\:_C\:_Users_david_Desktop_90.download_\uC774\uD074\uB9BD\uC2A4_el_web_neon_work_eclipse_.eclipseextension/description=
-repositories/file\:_C\:_Users_david_Desktop_90.download_\uC774\uD074\uB9BD\uC2A4_el_web_neon_work_eclipse_.eclipseextension/enabled=true
-repositories/file\:_C\:_Users_david_Desktop_90.download_\uC774\uD074\uB9BD\uC2A4_el_web_neon_work_eclipse_.eclipseextension/isSystem=true
-repositories/file\:_C\:_Users_david_Desktop_90.download_\uC774\uD074\uB9BD\uC2A4_el_web_neon_work_eclipse_.eclipseextension/name=C\:\\Users\\david\\Desktop\\90.download\\\uC774\uD074\uB9BD\uC2A4\\el_web_neon_work\\eclipse\\.eclipseextension
-repositories/file\:_C\:_Users_david_Desktop_90.download_\uC774\uD074\uB9BD\uC2A4_el_web_neon_work_eclipse_.eclipseextension/provider=
-repositories/file\:_C\:_Users_david_Desktop_90.download_\uC774\uD074\uB9BD\uC2A4_el_web_neon_work_eclipse_.eclipseextension/suffix=eclipse
-repositories/file\:_C\:_Users_david_Desktop_90.download_\uC774\uD074\uB9BD\uC2A4_el_web_neon_work_eclipse_.eclipseextension/type=org.eclipse.equinox.p2.extensionlocation.artifactRepository
-repositories/file\:_C\:_Users_david_Desktop_90.download_\uC774\uD074\uB9BD\uC2A4_el_web_neon_work_eclipse_.eclipseextension/uri=file\:/C\:/Users/david/Desktop/90.download/\uC774\uD074\uB9BD\uC2A4/el_web_neon_work/eclipse/.eclipseextension
-repositories/file\:_C\:_Users_david_Desktop_90.download_\uC774\uD074\uB9BD\uC2A4_el_web_neon_work_eclipse_.eclipseextension/version=1
-repositories/file\:_C\:_Users_david_Desktop_90.download_\uC774\uD074\uB9BD\uC2A4_el_web_neon_work_eclipse_configuration_org.eclipse.osgi_348_data_listener_1925729951/description=
-repositories/file\:_C\:_Users_david_Desktop_90.download_\uC774\uD074\uB9BD\uC2A4_el_web_neon_work_eclipse_configuration_org.eclipse.osgi_348_data_listener_1925729951/enabled=true
-repositories/file\:_C\:_Users_david_Desktop_90.download_\uC774\uD074\uB9BD\uC2A4_el_web_neon_work_eclipse_configuration_org.eclipse.osgi_348_data_listener_1925729951/isSystem=true
-repositories/file\:_C\:_Users_david_Desktop_90.download_\uC774\uD074\uB9BD\uC2A4_el_web_neon_work_eclipse_configuration_org.eclipse.osgi_348_data_listener_1925729951/name=dropins
-repositories/file\:_C\:_Users_david_Desktop_90.download_\uC774\uD074\uB9BD\uC2A4_el_web_neon_work_eclipse_configuration_org.eclipse.osgi_348_data_listener_1925729951/provider=
-repositories/file\:_C\:_Users_david_Desktop_90.download_\uC774\uD074\uB9BD\uC2A4_el_web_neon_work_eclipse_configuration_org.eclipse.osgi_348_data_listener_1925729951/type=org.eclipse.equinox.p2.artifact.repository.simpleRepository
-repositories/file\:_C\:_Users_david_Desktop_90.download_\uC774\uD074\uB9BD\uC2A4_el_web_neon_work_eclipse_configuration_org.eclipse.osgi_348_data_listener_1925729951/uri=file\:/C\:/Users/david/Desktop/90.download/\uC774\uD074\uB9BD\uC2A4/el_web_neon_work/eclipse/configuration/org.eclipse.osgi/348/data/listener_1925729951/
-repositories/file\:_C\:_Users_david_Desktop_90.download_\uC774\uD074\uB9BD\uC2A4_el_web_neon_work_eclipse_configuration_org.eclipse.osgi_348_data_listener_1925729951/version=1
-repositories/file\:_C\:_Users_david_Desktop_90.download_\uC774\uD074\uB9BD\uC2A4_el_web_neon_work_eclipse_p2_org.eclipse.equinox.p2.core_cache/description=
-repositories/file\:_C\:_Users_david_Desktop_90.download_\uC774\uD074\uB9BD\uC2A4_el_web_neon_work_eclipse_p2_org.eclipse.equinox.p2.core_cache/enabled=true
-repositories/file\:_C\:_Users_david_Desktop_90.download_\uC774\uD074\uB9BD\uC2A4_el_web_neon_work_eclipse_p2_org.eclipse.equinox.p2.core_cache/isSystem=true
-repositories/file\:_C\:_Users_david_Desktop_90.download_\uC774\uD074\uB9BD\uC2A4_el_web_neon_work_eclipse_p2_org.eclipse.equinox.p2.core_cache/name=download cache
-repositories/file\:_C\:_Users_david_Desktop_90.download_\uC774\uD074\uB9BD\uC2A4_el_web_neon_work_eclipse_p2_org.eclipse.equinox.p2.core_cache/provider=
-repositories/file\:_C\:_Users_david_Desktop_90.download_\uC774\uD074\uB9BD\uC2A4_el_web_neon_work_eclipse_p2_org.eclipse.equinox.p2.core_cache/suffix=artifacts.xml
-repositories/file\:_C\:_Users_david_Desktop_90.download_\uC774\uD074\uB9BD\uC2A4_el_web_neon_work_eclipse_p2_org.eclipse.equinox.p2.core_cache/type=org.eclipse.equinox.p2.artifact.repository.simpleRepository
-repositories/file\:_C\:_Users_david_Desktop_90.download_\uC774\uD074\uB9BD\uC2A4_el_web_neon_work_eclipse_p2_org.eclipse.equinox.p2.core_cache/uri=file\:/C\:/Users/david/Desktop/90.download/\uC774\uD074\uB9BD\uC2A4/el_web_neon_work/eclipse/p2/org.eclipse.equinox.p2.core/cache/
-repositories/file\:_C\:_Users_david_Desktop_90.download_\uC774\uD074\uB9BD\uC2A4_el_web_neon_work_eclipse_p2_org.eclipse.equinox.p2.core_cache/version=1.0.0
+repositories/file\:_C\:_00.KOSMO93_90.download_\uC774\uD074\uB9BD\uC2A4_el_web_neon_work_eclipse/description=
+repositories/file\:_C\:_00.KOSMO93_90.download_\uC774\uD074\uB9BD\uC2A4_el_web_neon_work_eclipse/enabled=true
+repositories/file\:_C\:_00.KOSMO93_90.download_\uC774\uD074\uB9BD\uC2A4_el_web_neon_work_eclipse/isSystem=true
+repositories/file\:_C\:_00.KOSMO93_90.download_\uC774\uD074\uB9BD\uC2A4_el_web_neon_work_eclipse/name=Bundle pool
+repositories/file\:_C\:_00.KOSMO93_90.download_\uC774\uD074\uB9BD\uC2A4_el_web_neon_work_eclipse/provider=
+repositories/file\:_C\:_00.KOSMO93_90.download_\uC774\uD074\uB9BD\uC2A4_el_web_neon_work_eclipse/suffix=artifacts.xml
+repositories/file\:_C\:_00.KOSMO93_90.download_\uC774\uD074\uB9BD\uC2A4_el_web_neon_work_eclipse/type=org.eclipse.equinox.p2.artifact.repository.simpleRepository
+repositories/file\:_C\:_00.KOSMO93_90.download_\uC774\uD074\uB9BD\uC2A4_el_web_neon_work_eclipse/uri=file\:/C\:/00.KOSMO93/90.download/\uC774\uD074\uB9BD\uC2A4/el_web_neon_work/eclipse/
+repositories/file\:_C\:_00.KOSMO93_90.download_\uC774\uD074\uB9BD\uC2A4_el_web_neon_work_eclipse/version=1.0.0
+repositories/file\:_C\:_00.KOSMO93_90.download_\uC774\uD074\uB9BD\uC2A4_el_web_neon_work_eclipse_.eclipseextension/description=
+repositories/file\:_C\:_00.KOSMO93_90.download_\uC774\uD074\uB9BD\uC2A4_el_web_neon_work_eclipse_.eclipseextension/enabled=true
+repositories/file\:_C\:_00.KOSMO93_90.download_\uC774\uD074\uB9BD\uC2A4_el_web_neon_work_eclipse_.eclipseextension/isSystem=true
+repositories/file\:_C\:_00.KOSMO93_90.download_\uC774\uD074\uB9BD\uC2A4_el_web_neon_work_eclipse_.eclipseextension/name=C\:\\00.KOSMO93\\90.download\\\uC774\uD074\uB9BD\uC2A4\\el_web_neon_work\\eclipse\\.eclipseextension
+repositories/file\:_C\:_00.KOSMO93_90.download_\uC774\uD074\uB9BD\uC2A4_el_web_neon_work_eclipse_.eclipseextension/provider=
+repositories/file\:_C\:_00.KOSMO93_90.download_\uC774\uD074\uB9BD\uC2A4_el_web_neon_work_eclipse_.eclipseextension/suffix=eclipse
+repositories/file\:_C\:_00.KOSMO93_90.download_\uC774\uD074\uB9BD\uC2A4_el_web_neon_work_eclipse_.eclipseextension/type=org.eclipse.equinox.p2.extensionlocation.artifactRepository
+repositories/file\:_C\:_00.KOSMO93_90.download_\uC774\uD074\uB9BD\uC2A4_el_web_neon_work_eclipse_.eclipseextension/uri=file\:/C\:/00.KOSMO93/90.download/\uC774\uD074\uB9BD\uC2A4/el_web_neon_work/eclipse/.eclipseextension
+repositories/file\:_C\:_00.KOSMO93_90.download_\uC774\uD074\uB9BD\uC2A4_el_web_neon_work_eclipse_.eclipseextension/version=1
+repositories/file\:_C\:_00.KOSMO93_90.download_\uC774\uD074\uB9BD\uC2A4_el_web_neon_work_eclipse_configuration_org.eclipse.osgi_348_data_listener_1925729951/description=
+repositories/file\:_C\:_00.KOSMO93_90.download_\uC774\uD074\uB9BD\uC2A4_el_web_neon_work_eclipse_configuration_org.eclipse.osgi_348_data_listener_1925729951/enabled=true
+repositories/file\:_C\:_00.KOSMO93_90.download_\uC774\uD074\uB9BD\uC2A4_el_web_neon_work_eclipse_configuration_org.eclipse.osgi_348_data_listener_1925729951/isSystem=true
+repositories/file\:_C\:_00.KOSMO93_90.download_\uC774\uD074\uB9BD\uC2A4_el_web_neon_work_eclipse_configuration_org.eclipse.osgi_348_data_listener_1925729951/name=dropins
+repositories/file\:_C\:_00.KOSMO93_90.download_\uC774\uD074\uB9BD\uC2A4_el_web_neon_work_eclipse_configuration_org.eclipse.osgi_348_data_listener_1925729951/provider=
+repositories/file\:_C\:_00.KOSMO93_90.download_\uC774\uD074\uB9BD\uC2A4_el_web_neon_work_eclipse_configuration_org.eclipse.osgi_348_data_listener_1925729951/suffix=artifacts.xml
+repositories/file\:_C\:_00.KOSMO93_90.download_\uC774\uD074\uB9BD\uC2A4_el_web_neon_work_eclipse_configuration_org.eclipse.osgi_348_data_listener_1925729951/type=org.eclipse.equinox.p2.artifact.repository.simpleRepository
+repositories/file\:_C\:_00.KOSMO93_90.download_\uC774\uD074\uB9BD\uC2A4_el_web_neon_work_eclipse_configuration_org.eclipse.osgi_348_data_listener_1925729951/uri=file\:/C\:/00.KOSMO93/90.download/\uC774\uD074\uB9BD\uC2A4/el_web_neon_work/eclipse/configuration/org.eclipse.osgi/348/data/listener_1925729951/
+repositories/file\:_C\:_00.KOSMO93_90.download_\uC774\uD074\uB9BD\uC2A4_el_web_neon_work_eclipse_configuration_org.eclipse.osgi_348_data_listener_1925729951/version=1.0.0
+repositories/file\:_C\:_00.KOSMO93_90.download_\uC774\uD074\uB9BD\uC2A4_el_web_neon_work_eclipse_p2_org.eclipse.equinox.p2.core_cache/description=
+repositories/file\:_C\:_00.KOSMO93_90.download_\uC774\uD074\uB9BD\uC2A4_el_web_neon_work_eclipse_p2_org.eclipse.equinox.p2.core_cache/enabled=true
+repositories/file\:_C\:_00.KOSMO93_90.download_\uC774\uD074\uB9BD\uC2A4_el_web_neon_work_eclipse_p2_org.eclipse.equinox.p2.core_cache/isSystem=true
+repositories/file\:_C\:_00.KOSMO93_90.download_\uC774\uD074\uB9BD\uC2A4_el_web_neon_work_eclipse_p2_org.eclipse.equinox.p2.core_cache/name=download cache
+repositories/file\:_C\:_00.KOSMO93_90.download_\uC774\uD074\uB9BD\uC2A4_el_web_neon_work_eclipse_p2_org.eclipse.equinox.p2.core_cache/provider=
+repositories/file\:_C\:_00.KOSMO93_90.download_\uC774\uD074\uB9BD\uC2A4_el_web_neon_work_eclipse_p2_org.eclipse.equinox.p2.core_cache/suffix=artifacts.xml
+repositories/file\:_C\:_00.KOSMO93_90.download_\uC774\uD074\uB9BD\uC2A4_el_web_neon_work_eclipse_p2_org.eclipse.equinox.p2.core_cache/type=org.eclipse.equinox.p2.artifact.repository.simpleRepository
+repositories/file\:_C\:_00.KOSMO93_90.download_\uC774\uD074\uB9BD\uC2A4_el_web_neon_work_eclipse_p2_org.eclipse.equinox.p2.core_cache/uri=file\:/C\:/00.KOSMO93/90.download/\uC774\uD074\uB9BD\uC2A4/el_web_neon_work/eclipse/p2/org.eclipse.equinox.p2.core/cache/
+repositories/file\:_C\:_00.KOSMO93_90.download_\uC774\uD074\uB9BD\uC2A4_el_web_neon_work_eclipse_p2_org.eclipse.equinox.p2.core_cache/version=1.0.0
 repositories/http\:__download.eclipse.org_eclipse_updates_4.6/count=1
 repositories/http\:__download.eclipse.org_eclipse_updates_4.6/enabled=true
 repositories/http\:__download.eclipse.org_eclipse_updates_4.6/nickname=The Eclipse Project Updates
