--- a/90.download/이클립스/el_web_neon_work/eclipse/p2/org.eclipse.equinox.p2.engine/profileRegistry/epp.package.jee.profile/.data/.settings/org.eclipse.equinox.p2.metadata.repository.prefs
+++ b/90.download/이클립스/el_web_neon_work/eclipse/p2/org.eclipse.equinox.p2.engine/profileRegistry/epp.package.jee.profile/.data/.settings/org.eclipse.equinox.p2.metadata.repository.prefs
@@ -1,4 +1,19 @@
 eclipse.preferences.version=1
+repositories/file\:_C\:_00.KOSMO93_90.download_\uC774\uD074\uB9BD\uC2A4_el_web_neon_work_eclipse_.eclipseextension/description=
+repositories/file\:_C\:_00.KOSMO93_90.download_\uC774\uD074\uB9BD\uC2A4_el_web_neon_work_eclipse_.eclipseextension/enabled=true
+repositories/file\:_C\:_00.KOSMO93_90.download_\uC774\uD074\uB9BD\uC2A4_el_web_neon_work_eclipse_.eclipseextension/isSystem=true
+repositories/file\:_C\:_00.KOSMO93_90.download_\uC774\uD074\uB9BD\uC2A4_el_web_neon_work_eclipse_.eclipseextension/name=C\:\\00.KOSMO93\\90.download\\\uC774\uD074\uB9BD\uC2A4\\el_web_neon_work\\eclipse\\.eclipseextension
+repositories/file\:_C\:_00.KOSMO93_90.download_\uC774\uD074\uB9BD\uC2A4_el_web_neon_work_eclipse_.eclipseextension/provider=
+repositories/file\:_C\:_00.KOSMO93_90.download_\uC774\uD074\uB9BD\uC2A4_el_web_neon_work_eclipse_.eclipseextension/type=org.eclipse.equinox.p2.extensionlocation.metadataRepository
+repositories/file\:_C\:_00.KOSMO93_90.download_\uC774\uD074\uB9BD\uC2A4_el_web_neon_work_eclipse_.eclipseextension/uri=file\:/C\:/00.KOSMO93/90.download/\uC774\uD074\uB9BD\uC2A4/el_web_neon_work/eclipse/.eclipseextension
+repositories/file\:_C\:_00.KOSMO93_90.download_\uC774\uD074\uB9BD\uC2A4_el_web_neon_work_eclipse_.eclipseextension/version=1
+repositories/file\:_C\:_00.KOSMO93_90.download_\uC774\uD074\uB9BD\uC2A4_el_web_neon_work_eclipse_configuration_org.eclipse.osgi_348_data_listener_1925729951/enabled=true
+repositories/file\:_C\:_00.KOSMO93_90.download_\uC774\uD074\uB9BD\uC2A4_el_web_neon_work_eclipse_configuration_org.eclipse.osgi_348_data_listener_1925729951/isSystem=true
+repositories/file\:_C\:_00.KOSMO93_90.download_\uC774\uD074\uB9BD\uC2A4_el_web_neon_work_eclipse_configuration_org.eclipse.osgi_348_data_listener_1925729951/name=dropins
+repositories/file\:_C\:_00.KOSMO93_90.download_\uC774\uD074\uB9BD\uC2A4_el_web_neon_work_eclipse_configuration_org.eclipse.osgi_348_data_listener_1925729951/suffix=content.xml
+repositories/file\:_C\:_00.KOSMO93_90.download_\uC774\uD074\uB9BD\uC2A4_el_web_neon_work_eclipse_configuration_org.eclipse.osgi_348_data_listener_1925729951/type=org.eclipse.equinox.internal.p2.metadata.repository.LocalMetadataRepository
+repositories/file\:_C\:_00.KOSMO93_90.download_\uC774\uD074\uB9BD\uC2A4_el_web_neon_work_eclipse_configuration_org.eclipse.osgi_348_data_listener_1925729951/uri=file\:/C\:/00.KOSMO93/90.download/\uC774\uD074\uB9BD\uC2A4/el_web_neon_work/eclipse/configuration/org.eclipse.osgi/348/data/listener_1925729951/
+repositories/file\:_C\:_00.KOSMO93_90.download_\uC774\uD074\uB9BD\uC2A4_el_web_neon_work_eclipse_configuration_org.eclipse.osgi_348_data_listener_1925729951/version=1.0.0
 repositories/file\:_C\:_Users_david_Desktop_90.download_\uC774\uD074\uB9BD\uC2A4_el_web_neon_work_eclipse_.eclipseextension/description=
 repositories/file\:_C\:_Users_david_Desktop_90.download_\uC774\uD074\uB9BD\uC2A4_el_web_neon_work_eclipse_.eclipseextension/enabled=true
 repositories/file\:_C\:_Users_david_Desktop_90.download_\uC774\uD074\uB9BD\uC2A4_el_web_neon_work_eclipse_.eclipseextension/isSystem=true
