--- a/90.download/이클립스/el_web_neon_work/eclipse/p2/org.eclipse.equinox.p2.engine/profileRegistry/epp.package.jee.profile/.data/.settings/org.eclipse.equinox.p2.metadata.repository.prefs
+++ b/90.download/이클립스/el_web_neon_work/eclipse/p2/org.eclipse.equinox.p2.engine/profileRegistry/epp.package.jee.profile/.data/.settings/org.eclipse.equinox.p2.metadata.repository.prefs
@@ -119,6 +119,13 @@ repositories/http\:__download.eclipse.org_releases_neon_201609281000/suffix=cont
 repositories/http\:__download.eclipse.org_releases_neon_201609281000/type=org.eclipse.equinox.internal.p2.metadata.repository.LocalMetadataRepository
 repositories/http\:__download.eclipse.org_releases_neon_201609281000/uri=http\://download.eclipse.org/releases/neon/201609281000
 repositories/http\:__download.eclipse.org_releases_neon_201609281000/version=1.0.0
+repositories/http\:__download.eclipse.org_releases_neon_201610111000/enabled=false
+repositories/http\:__download.eclipse.org_releases_neon_201610111000/isSystem=true
+repositories/http\:__download.eclipse.org_releases_neon_201610111000/name=Neon
+repositories/http\:__download.eclipse.org_releases_neon_201610111000/suffix=content.xml.xz
+repositories/http\:__download.eclipse.org_releases_neon_201610111000/type=org.eclipse.equinox.internal.p2.metadata.repository.LocalMetadataRepository
+repositories/http\:__download.eclipse.org_releases_neon_201610111000/uri=http\://download.eclipse.org/releases/neon/201610111000
+repositories/http\:__download.eclipse.org_releases_neon_201610111000/version=1.0.0
 repositories/http\:__download.eclipse.org_releases_neon_201612211000/enabled=false
 repositories/http\:__download.eclipse.org_releases_neon_201612211000/isSystem=true
 repositories/http\:__download.eclipse.org_releases_neon_201612211000/name=Neon
@@ -133,6 +140,13 @@ repositories/http\:__download.eclipse.org_releases_neon_201703231000/suffix=cont
 repositories/http\:__download.eclipse.org_releases_neon_201703231000/type=org.eclipse.equinox.internal.p2.metadata.repository.LocalMetadataRepository
 repositories/http\:__download.eclipse.org_releases_neon_201703231000/uri=http\://download.eclipse.org/releases/neon/201703231000
 repositories/http\:__download.eclipse.org_releases_neon_201703231000/version=1.0.0
+repositories/http\:__download.eclipse.org_releases_neon_201705151400/enabled=false
+repositories/http\:__download.eclipse.org_releases_neon_201705151400/isSystem=true
+repositories/http\:__download.eclipse.org_releases_neon_201705151400/name=Neon
+repositories/http\:__download.eclipse.org_releases_neon_201705151400/suffix=content.xml.xz
+repositories/http\:__download.eclipse.org_releases_neon_201705151400/type=org.eclipse.equinox.internal.p2.metadata.repository.LocalMetadataRepository
+repositories/http\:__download.eclipse.org_releases_neon_201705151400/uri=http\://download.eclipse.org/releases/neon/201705151400
+repositories/http\:__download.eclipse.org_releases_neon_201705151400/version=1.0.0
 repositories/http\:__download.eclipse.org_technology_epp_packages_neon/enabled=false
 repositories/http\:__download.eclipse.org_technology_epp_packages_neon/isSystem=true
 repositories/http\:__download.eclipse.org_technology_epp_packages_neon/name=
