--- a/30.Web/el_spring_kck_work/springKck/WebContent/WEB-INF/web.xml
+++ b/30.Web/el_spring_kck_work/springKck/WebContent/WEB-INF/web.xml
@@ -53,6 +53,6 @@
   	<!-- 아래 경로에 있는 프로퍼티로 log4j 세팅할래 -->
 	<context-param>
 				<param-name>log4jConfigLocation</param-name>
-				<param-value>/WEB-INF/classes/log4j.properties</param-value>
+				<param-value>/WEB-INF/classes/log4j.xml</param-value>
 	</context-param>
 </web-app>
